--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="aji.jpeg" alt="" width="300" height="400"></td>
+      <td><img src="Aji.jpeg" alt="" width="300" height="400"></td>
       <td>
         <h1>Hajeena Jeevan</h1>
         <p><em>Master of <strong>Computer Application</strong></em>
